Fix too large text

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,6 +3,19 @@
 @import "syntax.scss";
 @import "animate.scss";
 
+h2, h3, h4 {
+  color: rgb(37, 37, 37);
+  font-weight: 900;
+}
+
+h3 {
+  font-size: 1.8em;
+}
+
+h4 {
+  font-size: 1.2em;
+}
+
 /* Webkit Scrollbar Customize */
 ::-webkit-scrollbar {
   width: 8px;
@@ -371,6 +384,7 @@ p.img-404 {
 #home-title {
   margin: 0;
   text-align: center;
+  font-size: 2em;
 }
 
 #home-subtitle {
@@ -500,6 +514,7 @@ p.img-404 {
 
   h1 {
     margin-top: .1em;
+    font-size: 3em;
   }
 }
 
@@ -719,9 +734,13 @@ hr.post-end {
   border: 3px dashed rgba(255, 255, 255, .2);
   border-radius: 5px;
 
-  h2{
+  h2,
+  h3,
+  h4 {
     margin: 0;
     line-height: normal;
+    color: rgb(37, 37, 37);
+    font-weight: 900;
   }
 
   ul {
@@ -879,19 +898,20 @@ hr.post-end {
   }
 }
 
-h1 {
-  font-size: 3em;
-}
+@media (max-width: 768px) {
+  h1 {
+      font-size: 2em;
+  }
 
-h2, h3, h4 {
-  color: rgb(37, 37, 37);
-  font-weight: 900;
-}
+  h2 {
+    font-size: 1.5em;
+  }
 
-h3 {
-  font-size: 1.8em;
-}
+  h3 {
+    font-size: 1.125em;
+  }
 
-h4 {
-  font-size: 1.2em;
+  h4 {
+    font-size: 1em;
+  }
 }
